CSS/style.css
/* ... */
/* General styles */

* {
  text-transform: capitalize;
  list-style: none;
  text-decoration: none;
  scroll-behavior: smooth;
  margin: 0;
  padding: 0;
}

h1,
h2,
h3 {
  font-family: "georgia regular", "times new roman", serif;
}

h1 {
  letter-spacing: var(--big_letter_space);
  font-size: 1.75rem;
  text-align: center;
}

h2 {
  letter-spacing: var(--small_letter_space);
  font-size: 1.5rem;
}

h3 {
  font-size: 1.25rem;
  font-weight: normal;
  letter-spacing: var(--small_letter_space);
}

p,
a,
li {
  font-family: "arial", "tahoma", "sans-serif";
  font-size: 1rem;
  letter-spacing: var(--small_letter_space);
}

p {
  text-transform: none;
}

/* -------------- Mobile version ------------ */

/* Not visible Mobile*/
.desk_header,
.footer_horizontal_line,
.to_top_horizontal_container,
.footer_logo,
.copyright_container .social_media_container,
.map_address {
  display: none;
}

/* header Mobile */
header {
  background-color: var(--dark-blue);
}

.header_container {
  margin-inline: auto;
  padding-inline: 30px;
  max-width: 800px;
}

.mob_header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 7.5em;
}

.mob_logo {
  max-width: 181px;
  max-height: 90px;
}

.mob_logo_link img {
  width: 181px;
  height: 90px;
}

.mob_nav_cont {
  display: flex;
}

.hamburger_label {
  width: 25px;
  height: 25px;
  cursor: pointer;
}

.hamburger_icon {
  color: var(--white);
  font-size: 25px;
  width: 25px;
  text-align: center;
}

.mob_nav {
  position: absolute;
  top: 120px;
  left: 0;
  right: 0;
  text-align: center;
  align-content: center;
  background-color: var(--dark-blue);
  /* transition */
  display: block;
  opacity: 0;
  max-height: 0px;
  z-index: -99;
  transition: var(--main-transition);
}

.mob_nav ul {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  padding-block: 1rem;
}

.mob_nav ul li {
  display: flex;
  justify-content: center;
  align-items: center;
  align-self: center;
  height: 38px;
  width: 100%;
}

.mob_nav ul li a {
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: "Georgia";
  color: var(--white);
  font-size: var(--text_mob);
  font-weight: bold;
  letter-spacing: var(--small_letter_space);
  height: 100%;
  width: 100%;
}

.mob_nav ul li a:active,
.mob_nav ul li a:hover {
  background-color: var(--green);
  color: var(--black);
}

.mob_nav .active {
  border-block: solid 1px;
  max-width: 250px;
}

.mob_nav .active:hover {
  max-width: 100%;
  border: 0;
}

.mob_nav .nav_colour_btn {
  color: black;
  background-color: var(--yellow);
}

.nav_container #mob_nav:checked ~ .mob_nav {
  display: block;
  /* transition */
  opacity: 1;
  z-index: 99;
  max-height: 100%;
  transition: var(--main-transition);
}

/* Footer Mobile*/

footer {
  background-color: var(--dark-blue);
}

.footer_container {
  max-width: 800px;
  margin-inline: auto;
  color: var(--white);
  padding-block: 2em;
  padding-inline: 30px;
}

.footer_info_container {
  display: flex;
  flex-direction: column;
  gap: 50px;
}

.footer_info_container a,
.footer_info_container p {
  text-transform: capitalize;
}

.mob_footer_info_divs {
  display: flex;
  flex-direction: column;
  gap: 30px;
}

.footer_first_div_info {
  display: flex;
  flex-direction: column;
  gap: 1em;
}

.footer_second_div_info {
  display: flex;
  flex-direction: column;
  gap: 30px;
}

.footer_second_div_info a {
  color: var(--white);
  /* text-decoration: underline; */
}

.footer_second_div_info a:active,
.footer_second_div_info a:hover {
  color: var(--green);
}

.mob_location_headline {
  color: var(--orange);
}

.mob_contact_headline {
  color: var(--yellow);
}

.mob_hour_headline {
  color: var(--green);
}

.mob_footer_icon {
  padding-right: 10px;
  font-size: 25px;
}

.mob_horizontal_line,
.footer_horizontal_line {
  border: 1px solid var(--light-white);
  opacity: 0.5;
}

.mob_social_media_container,
.social_media_container {
  display: flex;
  gap: 20px;
}

.footer_media_icons {
  color: var(--white);
  font-size: 2rem;
  cursor: pointer;
}

.footer_media_icons:active,
.footer_media_icons:hover {
  color: var(--green);
}

.hour_flex {
  display: flex;
  justify-content: space-between;
  gap: 1rem;
}

.mob_footer_line {
  padding-block: 50px;
}

.footer_nav {
  display: flex;
  flex-direction: column;
  gap: 20px;
  width: fit-content;
}

.footer_nav a {
  color: var(--white);
}

.footer_nav a:hover,
.footer_nav a:active {
  color: var(--green);
}

.footer_nav .active {
  border-bottom: solid 1px;
  max-width: fit-content;
}

.footer_bottom_container {
  display: flex;
  flex-direction: column;
  justify-content: right;
  gap: 2em;
  padding-top: 2em;
}

.mob_to_top_horizontal_container {
  display: flex;
  justify-content: right;
}

.to_top {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  gap: 5px;
  width: fit-content;
  cursor: pointer;
  color: var(--white);
  text-shadow: var(--button-shadow);
}

.to_top p {
  font-size: 0.75rem;
  font-family: "arial", "tahoma", "sans-serif";
  text-transform: capitalize;
}

.to_top:active,
.to_top:hover {
  color: var(--green);
}

.arrow_up {
  font-size: 35px;
}

.copyright_container {
  display: flex;
  flex-direction: column;
  gap: 2em;
}

.copyright_copy {
  font-family: "georgia regular", "times new roman", serif;
  text-transform: capitalize;
  font-size: 10px;
  opacity: 0.7;
  text-align: center;
}

/* main */

.background_img {
  background-image: url(../images/milad-fakurian-PGdW_bHDbpI-unsplash.jpg);
  background-color: #9395ed; /*backup*/
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
  width: 100%;
  /* overflow: hidden; */
}

.ios-background-fixed {
  background-attachment: scroll;
  position: relative;
  background-size: cover;
  background-position: center;
}

.main_margin {
  padding-top: 2em;
  margin-inline: auto;
}
/* ... */

